--- a/solutions.css
+++ b/solutions.css
@@ -82,13 +82,48 @@
 
 
 .ex-9-img{
-    transition: all 1s linear 0s;
+
+    transition: all 5s linear 0s;
 }
 
 .ex-9-img:hover{
     filter:hue-rotate(90deg) brightness(0.5);
     border-radius: 15px;
-    height: 80px;  
-    /* width: auto; */
 
+    
+    height: 280px;  
+    width: auto;
+
+}
+
+
+
+.ex-10-icon{
+    animation-name: mov-10;
+    animation-duration: 3000s;
+
+}
+@keyframes mov-10 { 
+  
+    100%{
+        transform: rotate( 3600000deg) ;
+    }
+}
+
+
+.ex-11-icon:hover{
+    animation-name: mov-11;
+    animation-duration: 4s;
+
+}
+@keyframes mov-11 { 
+  
+    75%{
+        transform: rotate(270deg) ;
+    }
+    
+  
+    100%{
+        transform: rotate(0deg) ;
+    }
 }
