--- a/solutions.css
+++ b/solutions.css
@@ -42,12 +42,15 @@
 .ex-5-square{
     transition: all 2s linear 0s;
 }
-
-
 .ex-5-square:hover{
     width: 130px;
     height: 130px;    
+
 }
+/* 
+.ex-5-square:hover .col-xs-12 > .well{
+    padding:0px;    
+} */
 .ex-5-square:active{
     width: 30px;
     height: 30px;    
@@ -64,7 +67,6 @@
 .ex-7-img{
     transition: all 1s linear 0s;
 }
-
 .ex-7-img:hover{
     filter:invert(1) hue-rotate(160deg);
 }
@@ -79,8 +81,6 @@
     filter:hue-rotate(90deg) brightness(0.5);
     border-radius: 15px;
 }
-
-
 .ex-9-img{
 
     transition: all 5s linear 0s;
@@ -126,4 +126,107 @@
     100%{
         transform: rotate(0deg) ;
     }
+}
+
+
+.ex-12-button:hover .ex-12-top-white{
+    animation-name: mov-12-top;
+    animation-duration: 4s;
+
+}
+@keyframes mov-12-top { 
+  
+    50%{       
+        margin-left: 40%;
+    }
+    
+}
+
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation-name: mov-12-bottom;
+    animation-duration: 4s;
+
+}
+@keyframes mov-12-bottom { 
+  
+    50%{       
+        margin-right: 30%;
+    }
+    
+}
+.ex-13-top-white{
+    position:absolute;
+}
+
+
+.ex-13-button{
+    position: relative;
+}
+.ex-13-top-white{
+    position: absolute;
+}
+.ex-13-button:hover .ex-13-top-white{
+    animation-name: mov-13-top;
+    animation-duration: 5s;
+
+}
+@keyframes mov-13-top { 
+  
+    33%{       
+        top:-10px;
+        left:calc(100% - 10px);        
+    }
+    46%{       
+        top:calc(100% - 10px);
+        left:calc(100% - 10px);        
+    }
+    83%{       
+        top:calc(100% - 10px);
+        left:calc(0% - 10px);       
+    }
+    96%{       
+        top:calc(0% - 10px);
+        left:calc(0% - 10px);         
+    }
+    100%{       
+        top:calc(0% - 10px);
+        left:calc(10% - 10px);         
+    }
+
+    
+    /* tecnicamente dovrebbe essere -30px
+    nel left, ma uscirebbe dal riquadro */
+}
+.ex-13-bottom-white{
+    position: absolute;
+}
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: mov-13-bottom;
+    animation-duration: 5s;
+
+}
+@keyframes mov-13-bottom { 
+  
+    33%{       
+        bottom:-10px;
+        right:calc(100% - 50px);        
+    }
+    46%{       
+        bottom:calc(100% - 10px);
+        right:calc(100% - 50px);        
+    }
+    83%{       
+        bottom:calc(100% - 10px);
+        right:calc(0% - 50px);       
+    }
+    96%{       
+        bottom:calc(0% - 10px);
+        right:calc(0% - 50px);         
+    }
+    100%{       
+        bottom:calc(0% - 10px);
+        right:calc(10% - 50px);         
+    }
+
 }
