--- a/solutions.css
+++ b/solutions.css
@@ -51,6 +51,10 @@
 .ex-5-square:hover .col-xs-12 > .well{
     padding:0px;    
 } */
+/* non so come impedire che la riga grigia
+si allarghi,
+neanche che cresca in tutte e quattro i versi.
+ */
 .ex-5-square:active{
     width: 30px;
     height: 30px;    
@@ -90,7 +94,9 @@
     filter:hue-rotate(90deg) brightness(0.5);
     border-radius: 15px;
 
-    
+    /* non so perché ma il cambiamento di 
+    dimensioni non segue i 5s
+    impostati nel transition */
     height: 280px;  
     width: auto;
 
@@ -100,14 +106,15 @@
 
 .ex-10-icon{
     animation-name: mov-10;
-    animation-duration: 3000s;
+    animation-duration: 9000s;
 
 }
 @keyframes mov-10 { 
   
     100%{
-        transform: rotate( 3600000deg) ;
+        transform: rotate( -3600000deg) ;
     }
+    /* non penso sia la più nobile delle soluzioni */
 }
 
 
